# lia

./: .env.template  .gitignore  README.md  client_secret_1098259257856-1bkfr683cp83gfi98l1jn6lliqnokvha.apps.googleusercontent.com.json  config.yaml  pyproject-old.toml  pyproject.toml  reflected-mark-447421-u4-98480ad1064f.json  requirements.txt
db/: chroma.sqlite3
knowledge/: agent_bio.txt
src/lia/: main.py
src/lia/admin/: app.py  config.py
src/lia/admin/logs/twitter/: logs_twitter_1.txt  logs_twitter_10.txt  logs_twitter_11.txt  logs_twitter_12.txt  logs_twitter_13.txt  logs_twitter_14.txt  logs_twitter_15.txt  logs_twitter_16.txt  logs_twitter_17.txt  logs_twitter_18.txt  logs_twitter_19.txt  logs_twitter_2.txt  logs_twitter_20.txt  logs_twitter_21.txt  logs_twitter_22.txt  logs_twitter_23.txt  logs_twitter_24.txt  logs_twitter_25.txt  (+81 more)
src/lia/admin/routes/: agents.py  kickoff.py  logs.py  twitter.py  youtube.py  youtube_kickoff.py
src/lia/admin/templates/: index.html
src/lia/characters/: lia.py
src/lia/clients/: client_twitter.py  client_twitter_off.py  client_video.py  client_youtube.py
src/lia/clients/cookies/: twitter_account_cookie
src/lia/config/svideo/: agents.yaml  tasks.yaml
src/lia/config/twitter/: agents.yaml  tasks.yaml
src/lia/config/twitter_actions/: agents.yaml  tasks.yaml
src/lia/config/video_generate/: agents.yaml  tasks.yaml
src/lia/crews/: svideo_crew.py  twitter_actions.py  twitter_crew.py  video_generate_crew.py
src/lia/templates/: twitter.py
src/lia/tools/: main_tools.py  twitter.py  video.py  youtube.py
(+1 files in other folders)
