[project]
name = "lia"
version = "0.1.0"
description = "lia using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "elevenlabs>=1.50.3",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "google-api-python-client>=2.158.0",
    "google-auth>=2.37.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud>=0.34.0",
    "google-cloud-speech>=2.30.0",
    "google-cloud-texttospeech>=2.23.0",
    "gtts>=2.5.4",
    "loguru>=0.7.3",
    "opencv-python>=4.10.0.84",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "twikit>=2.2.0",
]

[project.scripts]
lia = "lia.main:run"
run_crew = "lia.main:run"
train = "lia.main:train"
replay = "lia.main:replay"
test = "lia.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
